Day 4 final code

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,14 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.slack.api/slack-api-client -->
+        <dependency>
+            <groupId>com.slack.api</groupId>
+            <artifactId>slack-api-client</artifactId>
+            <version>1.38.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
