--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -1,3 +1,5 @@
 pet.store.url=https://petstore.octoperf.com/actions/Catalog.action
 
 extent.report.path=test-output/extent-report.html
+
+slack.channel.id=C06PY0XRTSB
